--- a/client/src/components/categories/Categories.scss
+++ b/client/src/components/categories/Categories.scss
@@ -1,5 +1,5 @@
-.categories {
-  max-width: 85%;
+.categoriWrapper {
+  max-width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -27,12 +27,14 @@
   }
   button {
     width: 70px;
-    background: #555;
+    background: black;
+    border-radius: 10px;
+    padding: 5px;
     color: white;
     margin-left: 10px;
   }
-  .row {
-    min-width: 290px;
+  .categories {
+    min-width: 330px;
     display: flex;
     justify-content: space-between;
     align-items: center;
