--- a/client/src/components/chat/SupportScreen.scss
+++ b/client/src/components/chat/SupportScreen.scss
@@ -60,7 +60,7 @@
 .support-messages {
   padding: 1rem;
   width: 80%;
-  border: 1px solid red;
+  border: 1px solid black;
   input {
     width: calc(100% - 9rem);
   }
@@ -93,5 +93,28 @@
 @media only screen and (max-width: 600px) {
   .supportWrapper {
     display: block;
+    .support-users {
+      width: 90%;
+    }
+  }
+  .support-messages {
+    margin-top: 15px;
+    width: 90%;
+    ul {
+      height: calc(100vh - 26rem);
+      max-height: calc(100vh - 18rem);
+      overflow: scroll;
+    }
+    input {
+      width: 250px;
+      height: 50px;
+      border: 1px solid black;
+      border-radius: 10px;
+    }
+    button {
+      padding: 5px;
+      font-size: 15px;
+      margin-left: 180px;
+    }
   }
 }
