--- a/client/src/components/headers/Header.scss
+++ b/client/src/components/headers/Header.scss
@@ -7,7 +7,7 @@ header {
   justify-content: space-around;
   align-items: center;
   border-bottom: 1px solid #ddd;
-  .logo{
+  .logo {
     flex: 1;
     position: absolute;
     left: 15px;
@@ -20,8 +20,9 @@ header {
     display: inline-block;
     opacity: 0.7;
     padding: 0 20px;
-  }:hover {
-     opacity: 1;
+  }
+  :hover {
+    opacity: 1;
   }
 }
 .menu {
@@ -29,7 +30,7 @@ header {
 }
 .cart-icon {
   position: absolute;
-   right :20px;
+  right: 20px;
   span {
     background: crimson;
     border-radius: 20px;
@@ -42,59 +43,61 @@ header {
   }
 }
 
-.burger{
-  height: 25px;width: 25px;
+.burger {
+  height: 25px;
+  width: 25px;
   visibility: hidden;
   cursor: pointer;
   position: absolute;
   right: 65px;
-  
 }
-.menuItems{
-  visibility:hidden;
-  ul{
+.menuItems {
+  visibility: hidden;
+  ul {
     color: white;
   }
-  
 }
-.hidden{
+.hidden {
   visibility: hidden;
 }
-.show{
+.show {
   visibility: visibility;
 }
 
 @media only screen and (max-width: 720px) {
-  .menuItem{
+  .menuItem {
     visibility: hidden;
-    
   }
-  .link{
-    color: white ;
+  .link {
+    color: white;
   }
-  .burger{
-    visibility : inherit;
+  .burger {
+    visibility: inherit;
   }
-  .menuItems{
-    letter-spacing:2px;
-    visibility:inherit;
-    display : flex;
-    flex-direction: column  ;
+  .menuItems {
+    letter-spacing: 2px;
+    visibility: inherit;
+    display: flex;
+    flex-direction: column;
     position: absolute;
-    right: 55px;
+    right: 0;
     top: 37px;
-    width: 250px;
+    width: 360px;
     height: 150px;
     padding: 20px;
     margin: 10px;
-    background-color: black;
-    border-radius:10px;
+    background-color: lightsalmon;
+    border-radius: 10px;
     font-weight: 800;
     font-size: 15px;
     z-index: 99;
+    a {
+      font-size: 20px;
+      margin-left: -10px;
+      color: black;
+    }
   }
-  .header{
+  .header {
     font-size: 12px;
   }
 }
-
