--- a/client/src/components/product/Products.scss
+++ b/client/src/components/product/Products.scss
@@ -4,24 +4,12 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   margin: 10px 0;
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
-.delete-all {
+.deleteAll {
   text-align: right;
   margin: 20px;
-  input {
-    height: 25px;
-    width: 25px;
-    transform: translateY(5px);
-    margin: 0 15px;
-  }
-  span {
-    text-transform: uppercase;
-    color: rgb(3, 165, 206);
-    letter-spacing: 1.3px;
-    margin-right: 30px;
-  }
   button {
     border: 1px solid crimson;
     padding: 10px 25px;
