--- a/client/src/components/user/Login.scss
+++ b/client/src/components/user/Login.scss
@@ -10,8 +10,7 @@
     height: 25px;
     width: 25px;
     margin-top: 20px;
-    margin-left: 425px;
-    position: absolute;
+    margin-left: -40px;
   }
   h2 {
     font-size: 2rem;
@@ -31,7 +30,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap-reverse;
-    align-items: flex-start;
+    align-items: flex-end;
   }
   p {
     margin: 10px 0;
@@ -119,6 +118,20 @@
     &:active {
       box-shadow: none;
       transform: translateY(0);
+    }
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  .loginWrapper {
+    .loginButton,
+    .registerButton {
+      margin-top: 20px;
+      margin-bottom: 10px;
+      margin-left: -4px;
+    }
+    .fgPwd {
+      margin-top: 10px;
     }
   }
 }
